# fastcann

./: .gitignore  MANIFEST.in  README.md  canon.cpp  canon_kernel.cu  pyproject.toml  setup.py  simple_test.py  test_cannon_cuda.py  test_canon_cuda.py
fast_canon_layers/: __init__.py  layer.py
fastcann/: __init__.py  layer.py
